--- a/Flask/templates/customer_predict.html
+++ b/Flask/templates/customer_predict.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>BCPS</title>
+<title>Banking Customer & Loan Predicton System</title>
 <meta charset="utf-8">
 <link rel="icon" href="static/img/icon.png" type="image/x-icon">
 <link rel="stylesheet" href="static/css/bootstrap.css" type="text/css" media="screen">
@@ -105,7 +105,7 @@ jQuery(window).load(function () {
       <li><a class="icon-3" href="#"></a></li>
       <li><a class="icon-4" href="#"></a></li>
     </ul>
-    <div class="privacy pull-left">Copyrights @ BCPS <br> 2021</div>
+    <div class="privacy pull-left">Copyrights @ MCA Major Project <br> 2021</div>
   </div>
 </footer>
 <script src="static/js/bootstrap.js"></script>
