--- a/Flask/templates/index.html
+++ b/Flask/templates/index.html
@@ -107,7 +107,7 @@ jQuery(window).load(function () {
       <li><a class="icon-3" href="#"></a></li>
       <li><a class="icon-4" href="#"></a></li>
     </ul>
-    <div class="privacy pull-left">Copyrights @ BCPS <br> 2021</div>
+    <div class="privacy pull-left">Copyrights @ MCA Major Project <br> 2021</div>
   </div>
 </footer>
 <script src="static/js/bootstrap.js"></script>
