--- a/Flask/templates/loan_predict.html
+++ b/Flask/templates/loan_predict.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>BCPS</title>
+<title>Banking Customer & Loan Predicton System</title>
 <meta charset="utf-8">
 <link rel="icon" href="static/img/icon.png" type="image/x-icon">
 <link rel="stylesheet" href="static/css/bootstrap.css" type="text/css" media="screen">
@@ -60,7 +60,7 @@ jQuery(window).load(function () {
       <div class="span12">
         <div class="navbar navbar_">
           <div class="container">
-            <h1 class="brand brand_"><a href="#"><img alt="" src="static/img/bcps.png"> </a></h1>
+            <h1 class="brand brand_"><a href="#"><img alt="" src="static/img/bcps11.png"> </a></h1>
             <a class="btn btn-navbar btn-navbar_" data-toggle="collapse" data-target=".nav-collapse_">Menu <span class="icon-bar"></span> </a>
             <div class="nav-collapse nav-collapse_  collapse">
               <ul class="nav sf-menu">
@@ -124,7 +124,7 @@ jQuery(window).load(function () {
       <li><a class="icon-3" href="#"></a></li>
       <li><a class="icon-4" href="#"></a></li>
     </ul>
-    <div class="privacy pull-left">Copyrights @ BCPS <br> 2021</div>
+    <div class="privacy pull-left">Copyrights @ MCA Major Project<br> 2021</div>
   </div>
 </footer>
 <script src="static/js/bootstrap.js"></script>
